# langchain_learning

./: .gitignore  README.md  example.py
intro-to-langsmith/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
intro-to-langsmith/notebooks/module_0/: rag_application.ipynb  utils.py
intro-to-langsmith/notebooks/module_1/: 01 tracing_basics.ipynb  02 types_of_runs.ipynb  03 alternative_tracing_methods.ipynb  04 conversational_threads.ipynb  utils.py
intro-to-langsmith/notebooks/module_2/: 01 dataset_upload.ipynb  02 evaluators.ipynb  04 pairwise_experiments.ipynb  05 summary_evaluators.ipynb  experiments.ipynb  summary_evaluators.ipynb
intro-to-langsmith/notebooks/module_3/: 01 playground_experiments.ipynb  02 prompt_hub.ipynb  03 prompt_engineering_lifecycle.ipynb  app.py  playground_experiments.ipynb  prompt_engineering_lifecycle.ipynb  prompt_hub.ipynb
intro-to-langsmith/notebooks/module_4/: publishing_feedback.ipynb
intro-to-langsmith/notebooks/module_5/: 01 filtering.ipynb  online_evaluation.ipynb
lca-langchain-foundations/: .env.example  .gitignore  README.md  env_utils.py  example.env  pyproject.toml  requirements.txt
lca-langchain-foundations/notebooks/module-1/: 1.1_foundational_models.ipynb  1.1_prompting.ipynb  1.2_tools.ipynb  1.2_web_search.ipynb  1.3_memory.ipynb  1.4_multimodal_messages.ipynb  1.5_personal_chef.ipynb  1.5_personal_chef.py  langgraph.json
lca-langchain-foundations/notebooks/module-2/: 2.1_mcp.ipynb  2.1_travel_agent.ipynb  2.2_runtime_context.ipynb  2.2_state.ipynb  2.3_multi_agent.ipynb  2.4_wedding_planners.ipynb  bonus_rag.ipynb  bonus_sql.ipynb
lca-langgraph-essentials/: .gitignore  (+1 more)
(+232 files in other folders)
